Closed Bug 1542347 Opened 6 years ago Closed 6 years ago

fix some string flattening bits in security/manager/

Categories

(Core :: Security: PSM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: froydnj, Assigned: froydnj)

Details

Attachments

(2 files, 1 obsolete file)

No description provided.

We flatten an nsAString before calling GetPublicKey, but GetPublicKey
doesn't actually care about whether the string is null-terminated or
not. Let's save a tiny amount of work by not doing the flattening.

We already have a null-terminated nsString in this code; we don't need
to turn it into another null-terminated nsString.

Depends on D26355

We include this header all over the place, but after the previous
patches, we never call any functions from the header.

Depends on D26356

Attachment #9056194 - Attachment is obsolete: true
Pushed by nfroyd@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/06b2ae4f86bc eliminate needless string flattening in nsKeygenFormProcessor; r=keeler https://hg.mozilla.org/integration/autoland/rev/eade880c4185 eliminate needless string flattening in OSReauthenticator; r=keeler
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: