Bug 1542347 - eliminate needless string flattening in nsKeygenFormProcessor; r=keeler

We flatten an nsAString before calling GetPublicKey, but GetPublicKey
doesn't actually care about whether the string is null-terminated or
not.  Let's save a tiny amount of work by not doing the flattening.

Differential Revision: https://phabricator.services.mozilla.com/D26355

--HG--
extra : moz-landing-system : lando